# gen_ai_demo_rag_bot

./: .gitignore  DEPLOY_RENDER.md  Dockerfile  README.md  RENDER_DEPLOYMENT_TUTORIAL.md  api_server.py  api_test_results.json  main.py  pyproject.toml  render.yaml  test_api.py  test_api_comprehensive.py
app/: __init__.py  server.py
chatbot/: create_graph.py  main.py  runner.py
chatbot/prompts/: router_prompts.py
chatbot/rag_input_documents/: create_vector_storage.py
chatbot/rag_input_documents/markdown/: amazon.md  intel.md
chatbot/rag_storage/: documents_hash.txt
chatbot/rag_storage/1f3b6661-4ba0-4090-8112-d90db53deade/: index_metadata.pickle
gradio_example/: README.md  gradio_ui.py  run_ui.py
template_basic/: function_calling_routing_example.py  robust_routing_example.py
