[project]
name = "gen-ai-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.4",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "langsmith>=0.4.8",
    "matplotlib>=3.10.3",
    "python-dotenv>=1.1.1",
    "ipykernel>=6.24.0",
    "langchain-tavily==0.2.10",
    "sib-api-v3-sdk>=7.6.0",
    "chromadb>=0.5.0",
    "langchain-chroma>=0.2.0",
    "pypdf>=5.1.0",
    "pandas>=2.2.0",
    "unstructured>=0.15.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
