[project]
name = "gen-ai-demo"
version = "2.0.0"
description = "LangChain CLI chatbot with LangServe and LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core LangChain
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.4",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "langsmith>=0.4.8",
    # LangChain CLI and LangServe
    "langchain-cli>=0.0.30",
    "langserve[all]>=0.3.0",
    # API and web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=1.6.5",
    # RAG and vector storage
    "chromadb>=0.5.0",
    "langchain-chroma>=0.2.0",
    "langchain-tavily==0.2.10",
    # Document processing
    "pypdf>=5.1.0",
    "unstructured>=0.15.0",
    # Utilities
    "python-dotenv>=1.1.1",
    "pandas>=2.2.0",
    "graphviz>=0.21",
    "matplotlib>=3.10.3",
    "ipykernel>=6.24.0",
    "sib-api-v3-sdk>=7.6.0",
    "gradio>=5.41.1",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "packages"]

[tool.hatch.build.targets.wheel.sources]
"app" = "app"
"packages" = "packages"

[tool.langchain]
# LangChain CLI configuration for package management
